[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys-tools-report"
version = "0.8.1"
dynamic = ["description"]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools>=65.5.1",
    "scooby>=0.5.12",
    "pyvista>=0.34.1",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]
doc = [
    "ansys_sphinx_theme==1.1.6",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "Sphinx-copybutton==0.5.2",
    "myst-parser==4.0.0",
]

[tool.flit.module]
name = "ansys.tools.report"

[project.urls]
Source = "https://github.com/ansys/pyansys-tools-report"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools.report"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra -q -v --cov=ansys.tools.report --cov-report term"
testpaths = [
    "tests",
]
